--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,11 @@
-<h1>Daniel Bertoldo</h1>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Daniel Bertoldo</title>
+</head>
+<body>
+    <h1>Daniel</h1>
+</body>
+</html>
